# ConvFinQA

./: README.md  main.py  pyproject.toml
src/: evaluation.py  extraction.py  helper.py  interfaces.py  model_handler.py  prompt.py
