[tool.poetry]
name = "convfinqa"
version = "0.1.0"
description = ""
authors = ["fall-development-rob <fall.development@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
ollama = "^0.4.6"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
